Some related changes fixes
+ Fix hidden state on elements
+ Don't open a new window when clicking a related change

Change-Id: Ib5fa8d7463dc43ebf2211824f4177c794f7e9fe3

--- a/polygerrit-ui/app/elements/gr-related-changes-list.html
+++ b/polygerrit-ui/app/elements/gr-related-changes-list.html
@@ -89,8 +89,9 @@ limitations under the License.
       <template is="dom-repeat" items="[[_relatedResponse.changes]]" as="change">
         <div>
           <a href$="[[_computeChangeURL(change._change_number, change._revision_number)]]"
-              class$="[[_computeLinkClass(change)]]"
-              target="_blank">[[change.commit.subject]]</a>
+              class$="[[_computeLinkClass(change)]]">
+            [[change.commit.subject]]
+          </a>
           <span class$="[[_computeChangeStatusClass(change)]]">
             ([[_computeChangeStatus(change)]])
           </span>
@@ -101,32 +102,36 @@ limitations under the License.
       <h4>Submitted together</h4>
       <template is="dom-repeat" items="[[_submittedTogether]]" as="change">
         <a href$="[[_computeChangeURL(change._number)]]"
-            class$="[[_computeLinkClass(change)]]"
-            target="_blank">[[change.project]]: [[change.branch]]: [[change.subject]]</a>
+            class$="[[_computeLinkClass(change)]]">
+          [[change.project]]: [[change.branch]]: [[change.subject]]
+        </a>
       </template>
     </section>
-    <section hidden="[[!_sameTopic.length]]" hidden>
+    <section hidden$="[[!_sameTopic.length]]" hidden>
       <h4>Same topic</h4>
       <template is="dom-repeat" items="[[_sameTopic]]" as="change">
         <a href$="[[_computeChangeURL(change._number)]]"
-            class$="[[_computeLinkClass(change)]]"
-            target="_blank">[[change.project]]: [[change.branch]]: [[change.subject]]</a>
+            class$="[[_computeLinkClass(change)]]">
+          [[change.project]]: [[change.branch]]: [[change.subject]]
+        </a>
       </template>
     </section>
-    <section hidden="[[!_conflicts.length]]" hidden>
+    <section hidden$="[[!_conflicts.length]]" hidden>
       <h4>Merge conflicts</h4>
       <template is="dom-repeat" items="[[_conflicts]]" as="change">
         <a href$="[[_computeChangeURL(change._number)]]"
-            class$="[[_computeLinkClass(change)]]"
-            target="_blank">[[change.subject]]</a>
+            class$="[[_computeLinkClass(change)]]">
+          [[change.subject]]
+        </a>
       </template>
     </section>
-    <section hidden="[[!_cherryPicks.length]]" hidden>
+    <section hidden$="[[!_cherryPicks.length]]" hidden>
       <h4>Cherry picks</h4>
       <template is="dom-repeat" items="[[_cherryPicks]]" as="change">
         <a href$="[[_computeChangeURL(change._number)]]"
-            class$="[[_computeLinkClass(change)]]"
-            target="_blank">[[change.subject]]</a>
+            class$="[[_computeLinkClass(change)]]">
+          [[change.subject]]
+        </a>
       </template>
     </section>
   </template>
