Use page.show instead of page in file list
Change-Id: I201dc49935d77e546d55331899d049aa3db62fa3

--- a/polygerrit-ui/app/elements/gr-file-list.html
+++ b/polygerrit-ui/app/elements/gr-file-list.html
@@ -211,7 +211,7 @@ limitations under the License.
         if (opt_index != null) {
           this.selectedIndex = opt_index;
         }
-        page(this._computeDiffURL(this.changeNum, this.patchNum,
+        page.show(this._computeDiffURL(this.changeNum, this.patchNum,
             this.files[this.selectedIndex].__path));
       },
 
