Add rebase action with confirmation dialog
TODO in follow-up change
+ Autocomplete revisions/change numbers from the input
+ Consolidate button classes (it’s enough repeated code
  that it’s becomming a nuisance).
+ Perhaps move confirmation dialog functions into
  a behavior.

Change-Id: I382cc63591cd537dbe1d29a0451f392c1e77f287

--- a/polygerrit-ui/app/elements/gr-change-view.html
+++ b/polygerrit-ui/app/elements/gr-change-view.html
@@ -281,7 +281,7 @@ limitations under the License.
               actions="[[_change.actions]]"
               change-num="[[_changeNum]]"
               patch-num="[[_patchNum]]"
-              on-reload-change="_reload"></gr-change-actions>
+              on-reload-change="_reloadLatestPatchSet"></gr-change-actions>
         </div>
         <div class="changeInfo-column commitMessage">
           <h4>Commit message</h4>
@@ -594,6 +594,10 @@ limitations under the License.
             page.show('/');
             break;
         }
+      },
+
+      _reloadLatestPatchSet: function() {
+        page.show(this._computeChangePath(this._changeNum));
       },
 
       _reload: function() {
