--- a/polygerrit-ui/app/elements/gr-change-view.html
+++ b/polygerrit-ui/app/elements/gr-change-view.html
@@ -189,7 +189,7 @@ limitations under the License.
         <div class="header">
           <span class="header-title">
             <gr-change-star change="{{_change}}" hidden$="[[!_loggedIn]]"></gr-change-star>
-            <a href$="[[_computeChangePath(_change._number)]]">[[_change._number]]</a><span>:</span>
+            <a href$="[[_computeChangePermalink(_change._number)]]">[[_change._number]]</a><span>:</span>
             <span>[[_change.subject]]</span>
             <span class="changeStatus">[[_computeChangeStatus(_change.status)]]</span>
           </span>
@@ -494,6 +494,10 @@ limitations under the License.
 
       _computeChangePath: function(changeNum) {
         return '/c/' + changeNum;
+      },
+
+      _computeChangePermalink: function(changeNum) {
+        return '/' + changeNum;
       },
 
       _computeChangeStatus: function(status) {
