Render more actions on change view
There are more actions that don't require additional input and can be
rendered already now:

* Delete draft change
* Delete draft revision
* Publish draft revision

Also align the primary button to the right side of the container to even
more visually emphasize, that this button does something different in
this specific change context, except blue color.

Status of the current revision is currently not correctly computed,
because the current code only respects the change.status field in the
change/revision status calculation. When cange.status is NEW, then the
revision draft field must be read to correctly render draft revision
status. This will be fixed in follow-up change.

Test Plan:

- Add draft change. Confirm that Publish and Delete buttons are visible
  and work as exptected
- Add draft revision. Confirm that Publish and Delete buttons are
  visible and work as exptected

Change-Id: I9db90142088e165cf65b89abbe11a3d1dc6db634

--- a/polygerrit-ui/app/elements/gr-change-actions.html
+++ b/polygerrit-ui/app/elements/gr-change-actions.html
@@ -32,6 +32,7 @@ limitations under the License.
         background-color: #448aff;
         border-color: #448aff;
         color: #fff;
+        float: right;
       }
       button:before {
         content: attr(data-label);
@@ -73,6 +74,7 @@ limitations under the License.
             title$="[[action.title]]"
             hidden$="[[!action.enabled]]"
             data-action-key$="[[action.__key]]"
+            data-action-type$="[[action.__type]]"
             data-label$="[[action.label]]"
             on-tap="_handleActionTap"></button>
       </template>
@@ -82,6 +84,7 @@ limitations under the License.
             title$="[[action.title]]"
             disabled$="[[!action.enabled]]"
             data-action-key$="[[action.__key]]"
+            data-action-type$="[[action.__type]]"
             data-label$="[[action.label]]"
             data-loading-label$="[[_computeLoadingLabel(action.__key)]]"
             on-tap="_handleActionTap"></button>
@@ -102,11 +105,14 @@ limitations under the License.
     // TODO(davido): Add the rest of the change actions.
     var ChangeActions = {
       ABANDON: 'abandon',
+      DELETE: '/',
       RESTORE: 'restore',
     };
 
     // TODO(andybons): Add the rest of the revision actions.
     var RevisionActions = {
+      DELETE: '/',
+      PUBLISH: 'publish',
       REBASE: 'rebase',
       SUBMIT: 'submit',
     };
@@ -150,6 +156,7 @@ limitations under the License.
 
       _actionsChanged: function(actions, revisionActions) {
         this.hidden = revisionActions.submit == null &&
+            revisionActions.publish == null &&
             actions.abandon == null &&
             actions.restore == null;
       },
@@ -171,6 +178,7 @@ limitations under the License.
         for (var a in actions) {
           if (values.indexOf(a) == -1) { continue; }
           actions[a].__key = a;
+          actions[a].__type = k;
           result.push(actions[a]);
         }
         return result;
@@ -184,22 +192,31 @@ limitations under the License.
       },
 
       _computeButtonClass: function(action) {
-        return action == 'submit' ? 'primary' : '';
+        if (['submit', 'publish'].indexOf(action) != -1) {
+          return 'primary';
+        }
+        return '';
       },
 
       _handleActionTap: function(e) {
         e.preventDefault();
         var el = Polymer.dom(e).rootTarget;
         var key = el.getAttribute('data-action-key');
-        if (this._getValuesFor(RevisionActions).indexOf(key) > -1) {
+        var type = el.getAttribute('data-action-type');
+        if (type == 'revision') {
           if (key == RevisionActions.REBASE) {
             this._showRebaseDialog();
             return;
           }
-          this._fireRevisionAction('/' + key, this._revisionActions[key]);
+          this._fireRevisionAction(this._prependSlash(key),
+              this._revisionActions[key]);
         } else {
-          this._fireChangeAction('/' + key, this.actions[key]);
+          this._fireChangeAction(this._prependSlash(key), this.actions[key]);
         }
+      },
+
+      _prependSlash: function(key) {
+        return key == '/' ? key : '/' + key;
       },
 
       _handleConfirmDialogCancel: function() {
@@ -228,7 +245,11 @@ limitations under the License.
       _fireChangeAction: function(endpoint, action) {
         this._send(action.method, {}, endpoint).then(
           function() {
-            this.fire('reload-change', null, {bubbles: false});
+            if (endpoint == '/') {
+              page.show('/');
+            } else {
+              this.fire('reload-change', null, {bubbles: false});
+            }
           }.bind(this)).catch(function(err) {
             alert('Oops. Something went wrong. Check the console and bug the ' +
                 'PolyGerrit team for assistance.');
@@ -247,8 +268,12 @@ limitations under the License.
 
         this._send(action.method, opt_payload, endpoint, true).then(
           function() {
-            this.fire('reload-change', null, {bubbles: false});
-            enableButton();
+            if (endpoint == '/') {
+              page.show('/');
+            } else {
+              this.fire('reload-change', null, {bubbles: false});
+              enableButton();
+            }
           }.bind(this)).catch(function(err) {
             alert('Oops. Something went wrong. Check the console and bug the ' +
                 'PolyGerrit team for assistance.');
